--- a/InquiryList.html
+++ b/InquiryList.html
@@ -438,25 +438,58 @@
                                             // List<obj>から取得用
                                             let cbdNumber = arrayCbd.map(el => el.Id);
                                             console.log('res:' + res);
-                                            // コンタクトボード明細に紐づく、添付ファイルを取得し、画面出力
-                                            for (let j=0; j < contentversionIdArrary.length; j++){
-                                                $.ajax({
-                                                    type: 'GET',
-                                                    crossOrigin: true,
-                                                    url: 'https://protocomdev-dev-ed.my.salesforce.com/services/data/v54.0/sobjects/ContentVersion/' + contentversionIdArrary[j] + '/VersionData', 
-                                                    cache :false,
-                                                    //scriptCharset: 'Shift_JIS',
-                                                    headers: {"Authorization" : accToken},
-                                                    xhrFields : {responseType : 'blob'},
-                                                    success : function (dlFile) {
-                                                        console.log(dlFile);
-                                                    },
-                                                    error : function (data, errorThrown,status) {
-                                                        console.log(data);
-                                                        console.log(errorThrown);
-                                                        console.log(status);
-                                                    }
-                                                })
+                                            for (let i=0; i < cvList.length; i++){
+                                                //console.log('i:'+i);
+                                                // ファイルURL
+                                                fileUrlArray = [];
+                                                // Apex返却値
+                                                let cbd = {};
+                                                let contentversionNameArray = [];
+                                                let contentversionIdArrary = [];
+                                                // コンタクトボード明細
+                                                
+                                                let cbdRecType = '';
+                                                let cbdContent = '';
+                                                let cbdCreatedDate = '';
+                                                
+                                                // 1ループごとに設定
+                                                conId = cvList[i].LinkEntityId;
+                                                //console.log('cvList['+ i +'].CvNameList: ' + cvList[i].CvNameList);
+                                                contentversionNameArray = cvList[i].CvNameList;
+                                                contentversionIdArrary = cvList[i].CvIdList;
+                                                // コンタクトボードの情報を取得
+                                                cbdIndex = cbdNumber.indexOf(conId);
+                                                // コンタクトボード明細の値を設定
+                                                cbdRecType = arrayCbd[cbdIndex].RecordType__c;
+                                                cbdContent = arrayCbd[cbdIndex].Content__c;
+                                                cbdCreatedDate = arrayCbd[cbdIndex].CreatedDate;
+                                                // cbdをオブジェクト化
+                                                cbd = {
+                                                    'cbdId':conId,
+                                                    'cbdRecType':cbdRecType,
+                                                    'cbdContent':cbdContent,
+                                                    'cbdCreatedDate':cbdCreatedDate
+                                                };
+                                                // コンタクトボード明細に紐づく、添付ファイルを取得し、画面出力
+                                                for (let j=0; j < contentversionIdArrary.length; j++){
+                                                    $.ajax({
+                                                        type: 'GET',
+                                                        crossOrigin: true,
+                                                        url: 'https://protocomdev-dev-ed.my.salesforce.com/services/data/v54.0/sobjects/ContentVersion/' + contentversionIdArrary[j] + '/VersionData', 
+                                                        cache :false,
+                                                        //scriptCharset: 'Shift_JIS',
+                                                        headers: {"Authorization" : accToken},
+                                                        xhrFields : {responseType : 'blob'},
+                                                        success : function (dlFile) {
+                                                            console.log(dlFile);
+                                                        },
+                                                        error : function (data, errorThrown,status) {
+                                                            console.log(data);
+                                                            console.log(errorThrown);
+                                                            console.log(status);
+                                                        }
+                                                    })
+                                                }
                                             }
                                         },
                                         error : function (data, errorThrown,status) {
