--- a/InquiryList.html
+++ b/InquiryList.html
@@ -438,7 +438,7 @@
                                             // List<obj>から取得用
                                             let cbdNumber = arrayCbd.map(el => el.Id);
                                             console.log('res:' + res);
-                                            for (let i=0; i < cvList.length; i++){
+                                            /*for (let i=0; i < cvList.length; i++){
                                                 //console.log('i:'+i);
                                                 // ファイルURL
                                                 fileUrlArray = [];
@@ -490,7 +490,7 @@
                                                         }
                                                     })
                                                 }
-                                            }
+                                            }*/
                                         },
                                         error : function (data, errorThrown,status) {
                                             console.log(data);
