--- a/InquiryList.html
+++ b/InquiryList.html
@@ -404,7 +404,22 @@
                         console.log('acc:' + connectData.access_token);
                         // アクセストークン
                         let accToken = 'Bearer ' + connectData.access_token;
-
+                                                // コンタクトボード明細を取得
+                        $.ajax({
+                            type: 'GET',
+                            crossOrigin: true,
+                            url: 'https://protocomdev-dev-ed.my.salesforce.com/services/apexrest/Mock_CBD/' + caseNum.value,
+                            dataType: 'json',
+                            cache :false,
+                            headers: {"Authorization" : accToken},
+                            dataType: 'json',
+                            data : JSON.stringify(caseNum.value),
+                            success : function (res) {
+                                console.log('res1:' + res);
+                            },
+                            error : function (data, errorThrown,status) {
+                            }
+                        })
                     },
                     error : function (data, errorThrown,status) {
                     }
