--- a/InquiryList.html
+++ b/InquiryList.html
@@ -430,7 +430,7 @@
                                         dataType: 'json',
                                         data : JSON.stringify(caseNum.value),
                                         success : function (Cv) {
-                                            //console.log('Cv:' + Cv);
+                                            console.log('Cv:' + Cv);
                                             let cvList = Cv; // [Id LinkEntityId(コンタクトボードID), List CvIdList(コンテンツバージョンID), CvName]
 
                                             // コンタクトボード明細と添付ファイルの組み合わせを格納するリスト
