--- a/InquiryList.html
+++ b/InquiryList.html
@@ -438,6 +438,7 @@
                                             cbdObjList = [];
                                             // List<obj>から取得用
                                             let cbdNumber = arrayCbd.map(el => el.Id);
+                                            console.log('cbdNumber:' + cbdNumber);
                                             // コンタクトボードの件数分、画面出力処理
                                             for (let i=0; i < cvList.length; i++){
                                                 //console.log('i:'+i);
